Fix dropdown menu visibility on mobile layout of public pages

--- a/app/assets/stylesheets/public.scss
+++ b/app/assets/stylesheets/public.scss
@@ -52,6 +52,11 @@
     font-size: 16px;
   }
 
+  .navbar-fixed-top .navbar-collapse,
+  .navbar-fixed-bottom .navbar-collapse {
+    max-height: none !important;
+  }
+
 
 }
 
